Changelog
=========

1.8 - (unreleased)
------------------
 * Feature: Add two new catalog metadata columns: comments and published_readiness [tiberich #3645]
 * Change: Use catalog search and brains to display the ims_timeline [tiberich #3645]
 * Feature: Add readiness percentage in the ims_timeline [tiberich #3645]
 * Change: Add customized view template for ExternalDataSpecs [tiberich #3192]
 * Feature: On new assessment version, 'File' children are not copied [ghicaale #3601]
 * Feature: Link indicators and/or assessments with comments on
     timeline template [ghicaale #3601]
 * Bug fix: Fixed adding policy document with '(' in title [tiberich #3614]
 * Bug fix: Link directly to Scientific Reference if they don't have a remote url [tiberich #3646]
 * Bug fix: Improved portlet readiness display for Assessments [tiberich #3606]
 * Feature: Added custom faceted widget to be used in sorting indicators [tiberich #3502]
 * Change: Made assessment agg edit to reload the portlet readiness [tiberich #3605]
 * Change: Add event subscriber for Assessment state change. It publishes all related figures on
   assessment publication [tiberich #3644]

1.7 - (2010-09-06)
------------------
 * Change: Added two new checks on Assessment readiness [tiberich 3603]
 * Feature: Show links to missing fields from the portlet for readiness, on agg edit [tiberich 3598]
 * Change: Fixed some design issues with switch box not visible and alignment of toc and metabox [demarant].
 * Feature: Use the multiselect autocomplete widget for Ownership in Spec agg edit [tiberich 3597]
 * Bug fix: Override FactSheetDocument.index_html() to avoid recursion error [tiberich 3533]
 * Change: Added tooltips to all fields on aggregated edit [ghicaale #3420]
 * Bug fix: Updated broken internal urls to EEA mamagement plan system [demarant]
 * Bug fix: Fixed javascript error when reloading relateditems fragment [tiberich #3591]