@@ -20,7 +20,7 @@
            name="get_readiness"
            for="eea.indicators.content.interfaces.IAssessment"
            permission="zope2.View"
-           class=".assessment.WorkflowStateReadiness"
+           class=".assessment.WorkflowStateReadinessView"
            allowed_interface="eea.workflow.interfaces.IObjectReadiness" />
 
   <browser:page
