@@ -35,7 +35,7 @@
            name="get_readiness"
            for="eea.indicators.content.interfaces.ISpecification"
            permission="zope2.View"
-           class=".specification.WorkflowStateReadiness"
+           class=".specification.WorkflowStateReadinessView"
            allowed_interface="eea.workflow.interfaces.IObjectReadiness"
            />
 
