@@ -5,7 +5,8 @@ Changelog
 ------------------
  * Feature: Add two new catalog metadata columns: comments and published_readiness [tiberich #3645]
  * Change: Use catalog search and brains to display the ims_timeline [tiberich #3645]
- * Feature: Add readiness percentage in the ims_timeline [tiberich #3645]
+ * Feature: Display not ready specs and assessments in red, with an icon that AJAX 
+   loads the readiness status in a tooltip, in the ims_timeline [tiberich #3645]
  * Change: Add customized view template for ExternalDataSpecs [tiberich #3192]
  * Feature: On new assessment version, 'File' children are not copied [ghicaale #3601]
  * Feature: Link indicators and/or assessments with comments on
